# arcipelago

./: .gitignore  .pre-commit-config.yaml  README.md  dummy.sql  pyproject.toml  schema.sql  schema_v2.sql  schema_v3.sql
arcipelago/: config.py  db.py  event.py  init_db.py  main.py  migrate.py  notification.py
arcipelago/conversations/: create_event.py  edit_event.py  keyboards.py  send_feedback.py  text.py
arcipelago/extra/: gcalendar.py
tests/: mockups.py  test_db.py  test_edit_conv.py  test_event.py  test_event_conv.py  test_gcalendar.py  test_notification.py  test_send_feedback.py
